kernel: add smp support

--- a/hydrogen/kernel/CMakeLists.txt
+++ b/hydrogen/kernel/CMakeLists.txt
@@ -29,6 +29,7 @@ add_executable(hydrogen
     src/util/list.c
     src/util/panic.c
     src/util/print.c
+    src/util/spinlock.c
     src/util/string.c
     src/util/string.S
     src/util/time.c
