--- a/hydrogen/CMakeLists.txt
+++ b/hydrogen/CMakeLists.txt
@@ -4,3 +4,4 @@ add_library(hydrogen-api INTERFACE)
 target_include_directories(hydrogen-api INTERFACE include)
 
 add_subdirectory(kernel)
+add_subdirectory(vdso)
