--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_C_STANDARD_REQUIRED ON)
 option(PROXIMA_ASSERTIONS "Enable assertions (always enabled in debug mode)")
 
 add_compile_options(-fno-common -Wall -Wextra)
-add_link_options(-nostdlib -Wl,-z,max-page-size=0x4000)
+add_link_options(-nostdlib)
 
 if (PROXIMA_ASSERTIONS)
     add_compile_definitions(PROXIMA_ASSERTIONS=1)
