--- a/.github/workflows/create-release-iso.yaml
+++ b/.github/workflows/create-release-iso.yaml
@@ -18,7 +18,7 @@ jobs:
         submodules: recursive
 
     - name: Install dependencies
-      run: sudo apt-get install -y xorriso ninja-build meson llvm-18-tools
+      run: sudo apt-get install -y xorriso ninja-build meson llvm-18
 
     - name: Configure Meson
       run: |
