hydrogen: use meson subproject for uacpi

--- a/subprojects/hydrogen/kernel/meson.build
+++ b/subprojects/hydrogen/kernel/meson.build
@@ -52,25 +52,6 @@ executable(
     'src/util/spinlock.c',
     'src/util/time.c',
     'src/util/xarray.c',
-    'uacpi/source/default_handlers.c',
-    'uacpi/source/event.c',
-    'uacpi/source/interpreter.c',
-    'uacpi/source/io.c',
-    'uacpi/source/mutex.c',
-    'uacpi/source/namespace.c',
-    'uacpi/source/notify.c',
-    'uacpi/source/opcodes.c',
-    'uacpi/source/opregion.c',
-    'uacpi/source/osi.c',
-    'uacpi/source/registers.c',
-    'uacpi/source/resources.c',
-    'uacpi/source/shareable.c',
-    'uacpi/source/sleep.c',
-    'uacpi/source/stdlib.c',
-    'uacpi/source/tables.c',
-    'uacpi/source/types.c',
-    'uacpi/source/uacpi.c',
-    'uacpi/source/utilities.c',
     c_args: [
         '-ffreestanding',
         '-fno-pie',
@@ -81,7 +62,7 @@ executable(
         '-mno-red-zone',
     ],
     implicit_include_directories: false,
-    include_directories: [api_inc, priv_inc],
+    include_directories: [api_inc, priv_inc, uacpi.get_variable('includes')],
     install: true,
     install_dir: '/boot',
     install_mode: 'rw-r--r--',
@@ -89,5 +70,5 @@ executable(
     link_args: ['-nostdlib', '-static', '-T' + linker_script],
     link_depends: linker_script,
     objects: vdso_object,
-    sources: lib_sources,
+    sources: lib_sources + uacpi.get_variable('sources'),
 )
