hydrogen: implement vfs

--- a/subprojects/hydrogen/kernel/meson.build
+++ b/subprojects/hydrogen/kernel/meson.build
@@ -29,6 +29,9 @@ executable(
     'src/drv/hpet.c',
     'src/drv/pci.c',
     'src/drv/pic.c',
+    'src/fs/ramfs.c',
+    'src/fs/vfs.c',
+    'src/init/initrd.c',
     'src/init/main.c',
     'src/init/main.S',
     'src/mem/heap.c',
