--- a/subprojects/hydrogen/vdso/meson.build
+++ b/subprojects/hydrogen/vdso/meson.build
@@ -6,6 +6,7 @@ vdso = shared_library(
     c_args: ['-ffreestanding', '-fno-stack-check', '-fno-stack-protector'],
     implicit_include_directories: false,
     include_directories: [api_inc, priv_inc],
+    install: true,
     link_args: ['-nostdlib', '-T' + linker_script],
     link_depends: linker_script,
     sources: lib_sources,
