hydrogen: add syscalls for vfs

--- a/subprojects/hydrogen/kernel/meson.build
+++ b/subprojects/hydrogen/kernel/meson.build
@@ -45,8 +45,13 @@ executable(
     'src/sched/sched.c',
     'src/sched/sched.S',
     'src/sched/sema.c',
+    'src/sys/fd.c',
+    'src/sys/io.c',
+    'src/sys/sched.c',
     'src/sys/syscall.c',
     'src/sys/syscall.S',
+    'src/sys/vfs.c',
+    'src/sys/vmm.c',
     'src/sys/vdso.c',
     'src/util/idmap.c',
     'src/util/list.c',
