hydrogen: implement execve and start working on a dynamic linker

--- a/meson.build
+++ b/meson.build
@@ -1,3 +1,6 @@
 project('proxima', license: 'MIT', license_files: 'LICENSE', version: '0.1.0')
 
+subproject('proxutils')
 subproject('hydrogen')
+subproject('ld')
+subproject('init')
