--- a/subprojects/hydrogen/kernel/meson.build
+++ b/subprojects/hydrogen/kernel/meson.build
@@ -40,6 +40,7 @@ executable(
     'src/mem/pmm.c',
     'src/mem/vheap.c',
     'src/mem/vmm.c',
+    'src/sched/exec.c',
     'src/sched/mutex.c',
     'src/sched/proc.c',
     'src/sched/sched.c',
@@ -47,6 +48,7 @@ executable(
     'src/sched/sema.c',
     'src/sys/fd.c',
     'src/sys/io.c',
+    'src/sys/proc.c',
     'src/sys/sched.c',
     'src/sys/syscall.c',
     'src/sys/syscall.S',
@@ -69,6 +71,7 @@ executable(
         '-mgeneral-regs-only',
         '-mno-red-zone',
     ],
+    dependencies: proxutils,
     implicit_include_directories: false,
     include_directories: [api_inc, priv_inc, uacpi.get_variable('includes')],
     install: true,
