--- a/.github/workflows/create-release-iso.yaml
+++ b/.github/workflows/create-release-iso.yaml
@@ -24,7 +24,7 @@ jobs:
       run: |
         meson setup ${{github.workspace}}/builddir ${{github.workspace}} \
           --cross-file ${{github.workspace}}/scripts/cross/${{matrix.arch}}.txt -Dbuildtype=release -Db_lto=true \
-          -Db_lto_mode=thin -Db_ndebug=true
+          -Db_lto_mode=thin -Db_ndebug=true -Dprefix=/usr
 
     - name: Build
       run: meson compile -C ${{github.workspace}}/builddir
