--- a/.github/workflows/create-release-iso.yaml
+++ b/.github/workflows/create-release-iso.yaml
@@ -2,28 +2,44 @@ name: Create release ISO
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   build:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-22.04
 
     strategy:
       matrix:
-        arch: [x86_64]
+        arch:
+          - x86_64
 
     steps:
     - uses: actions/checkout@v4
-      with:
-        submodules: recursive
 
     - name: Install dependencies
-      run: sudo apt-get install -y xorriso ninja-build meson bison flex libgmp3-dev libmpc-dev libmpfr-dev libisl-dev mtools nasm
+      run: |
+        sudo apt-get install -y bison flex libgmp3-dev libmpc-dev libmpfr-dev libisl-dev meson mtools nasm ninja-build
+        sudo pip3 install xbstrap
+
+    - name: Setup
+      run: |
+        mkdir build
+        cat > build/bootstrap-site.yml << EOF
+        define_options:
+          arch: ${{matrix.arch}}
+        EOF
+        ( cd build && xbstrap init .. )
 
     - name: Build
-      run: ./build.py --target ${{matrix.arch}} iso
+      run: xbstrap install proxima
+      working-directory: build
+
+    - name: Create ISO
+      run: xbstrap run make-iso
+      working-directory: build
 
     - uses: actions/upload-artifact@v4
       with:
         name: iso-image
-        path: ${{github.workspace}}/build/${{matrix.arch}}/proxima.iso
+        path: build/proxima.iso
