packages/host-gcc: ensure compiled binutils is used

--- a/packages/gcc.yml
+++ b/packages/gcc.yml
@@ -35,6 +35,9 @@ tools:
           - args: ['make', '-j@PARALLELISM@', 'inhibit_libc=true', 'all-gcc']
         install:
           - args: ['make', '-j@PARALLELISM@', 'install-gcc']
+          - args: ['mkdir', '-p', '@PREFIX@/@OPTION:arch@-unknown-proxima/bin']
+          - args: ['ln', '-sf', '../../host-binutils/bin/as', '@PREFIX@/@OPTION:arch@-unknown-proxima/bin/as']
+          - args: ['ln', '-sf', '../../host-binutils/bin/ld', '@PREFIX@/@OPTION:arch@-unknown-proxima/bin/ld']
       - name: support
         pkgs_required:
           - libc
