--- a/.github/workflows/create-release-iso.yaml
+++ b/.github/workflows/create-release-iso.yaml
@@ -17,15 +17,16 @@ jobs:
           - x86_64
 
     steps:
-    - uses: actions/checkout@v4
-      with:
-        submodules: recursive
-
     - name: Install dependencies
       run: |
         apk add bash bison flex gcc g++ git gmp-dev isl-dev m4 make meson mtools nasm ninja mpc1-dev mpfr-dev perl \
                 py3-pip tar xorriso
         pip3 install --break-system-packages xbstrap
+
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        submodules: recursive
 
     - name: Setup
       run: |
@@ -44,7 +45,8 @@ jobs:
       run: xbstrap run make-iso
       working-directory: build
 
-    - uses: actions/upload-artifact@v4
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
       with:
         name: iso-image
         path: build/proxima.iso
