--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -9,6 +9,8 @@ declare_options:
     default: release
   - name: lto
     default: 'true'
+  - name: host-gdb
+    default: 'disable'
 
 tasks:
   - name: make-iso
