--- a/packages/gcc.yml
+++ b/packages/gcc.yml
@@ -19,6 +19,9 @@ tools:
       - tool: host-binutils
         recursive: true
     configure:
+      - args: |
+          sed -i "s/checking dependency style/checking dependency style (\$ac_aux_dir ; \$am_depcomp ; \$am_compiler_list ; \$(sed -n 's\/^\\\([a-zA-Z
+0-9*]\\\))$\/\\\1\/p' < .\/depcomp))/g" '@THIS_SOURCE_DIR@/libcpp/configure'
       - args:
           - '@THIS_SOURCE_DIR@/configure'
           - '--prefix=@PREFIX@'
