--- a/packages/binutils.yml
+++ b/packages/binutils.yml
@@ -26,8 +26,23 @@ tools:
           - '--target=@OPTION:arch@-unknown-proxima'
           - '--with-sysroot=@SYSROOT_DIR@'
           - '--disable-nls'
-          - '--@OPTION:host-gdb@-gdb'
+          - '--disable-gdb'
     compile:
       - args: ['make', '-j@PARALLELISM@', 'MAKEINFO=true']
     install:
       - args: ['make', '-j@PARALLELISM@', 'MAKEINFO=true', 'install']
+  - name: host-gdb
+    architecture: '@OPTION:arch@'
+    from_source: binutils
+    configure:
+      - args:
+        - '@THIS_SOURCE_DIR@/configure'
+        - '--prefix=@PREFIX@'
+        - '--target=@OPTION:arch@-unknown-proxima'
+        - '--with-sysroot=@SYSROOT_DIR@'
+        - '--disable-nls'
+        - '--enable-gdb'
+    compile:
+      - args: ['make', '-j@PARALLELISM@', 'MAKEINFO=true', 'all-gdb']
+    install:
+      - args: ['make', '-j@PARALLELISM@', 'MAKEINFO=true', 'install-gdb']
