--- a/packages/hydrogen.yml
+++ b/packages/hydrogen.yml
@@ -18,6 +18,7 @@ packages:
           - '-Db_lto=@OPTION:lto@'
           - '-Db_lto_mode=thin'
           - '-Db_ndebug=if-release'
+          - '-Dqemu_debugcon=true'
           - '@THIS_SOURCE_DIR@'
     build:
       - args: ['meson', 'compile', '-j@PARALLELISM@']
