--- a/packages/plibc.yml
+++ b/packages/plibc.yml
@@ -1,10 +1,13 @@
 packages:
-  - name: hydrogen
+  - name: plibc
     implict_package: true
     architecture: '@OPTION:arch@'
     source:
       subdir: sources
       version: '0.0pl@ROLLING_ID'
+    pkgs_required:
+      - filesystem
+      - hydrogen
     tools_required:
       - tool: host-gcc
         stage_dependencies: [compiler]
@@ -19,8 +22,7 @@ packages:
           - '-Db_lto=@OPTION:lto@'
           - '-Db_lto_mode=thin'
           - '-Db_ndebug=if-release'
-          - '-Dqemu_debugcon=true'
           - '@THIS_SOURCE_DIR@'
     build:
-      - args: ['meson', 'compile', '-j@PARALLELISM@']
-      - args: ['meson', 'install', '--no-rebuild', '--destdir=@THIS_COLLECT_DIR@']
+      - args: ['meson', 'install', '--destdir=@THIS_COLLECT_DIR@']
+      - args: ['cp', '@THIS_COLLECT_DIR@/usr/lib/ld64.so.1', '@THIS_COLLECT_DIR@/boot']
