--- a/.github/workflows/create-release-iso.yaml
+++ b/.github/workflows/create-release-iso.yaml
@@ -15,8 +15,8 @@ jobs:
     steps:
     - name: Install dependencies
       run: |
-        sudo apt-get install -y bison flex libgmp3-dev libisl-dev libmpc-dev libmpfr-dev meson mtools nasm ninja-build \
-                                xorriso
+        sudo apt-get install -y bison flex help2man libgmp3-dev libisl-dev libmpc-dev libmpfr-dev meson mtools nasm \
+                                ninja-build xorriso
         sudo pip3 install --break-system-packages xbstrap
 
     - name: Checkout
