packages/plibc: fix destination directory not being created

--- a/packages/plibc.yml
+++ b/packages/plibc.yml
@@ -25,4 +25,5 @@ packages:
           - '@THIS_SOURCE_DIR@'
     build:
       - args: ['meson', 'install', '--destdir=@THIS_COLLECT_DIR@']
+      - args: ['mkdir', '-p', '@THIS_COLLECT_DIR@/boot']
       - args: ['cp', '@THIS_COLLECT_DIR@/usr/lib/ld64.so.1', '@THIS_COLLECT_DIR@/boot']
