--- a/packages/plibc.yml
+++ b/packages/plibc.yml
@@ -4,7 +4,7 @@ packages:
     architecture: '@OPTION:arch@'
     source:
       subdir: sources
-      version: '0.0pl@ROLLING_ID'
+      version: '0.0pl@ROLLING_ID@'
     pkgs_required:
       - filesystem
       - hydrogen
