--- a/packages/meson.yml
+++ b/packages/meson.yml
@@ -6,4 +6,8 @@ tools:
       version: '0.0.0'
     install:
       - args: ['mkdir', '-p', '@PREFIX@']
-      - args: ['@SOURCE_ROOT@/support/cross/meson-@OPTION:arch@.sh', '@PREFIX@/cross.txt', '@SYSROOT_DIR@']
+      - args:
+          - '@SOURCE_ROOT@/support/cross/meson-@OPTION:arch@.sh'
+          - '@PREFIX@/cross.txt'
+          - '@SYSROOT_DIR@'
+          - '@OPTION:arch@-@OPTION:triplet@'
