--- a/packages/binutils.yml
+++ b/packages/binutils.yml
@@ -2,8 +2,8 @@ sources:
   - name: binutils
     subdir: ports
     git: 'https://sourceware.org/git/binutils-gdb.git'
-    tag: 'binutils-2_43_1'
-    version: '2.43.1'
+    tag: 'binutils-2_44'
+    version: '2.44'
     tools_required:
       - host-autoconf-2.69
       - host-automake
@@ -23,7 +23,7 @@ tools:
       - args:
           - '@THIS_SOURCE_DIR@/configure'
           - '--prefix=@PREFIX@'
-          - '--target=@OPTION:arch@-unknown-proxima'
+          - '--target=@OPTION:arch@-@OPTION:triplet@'
           - '--with-sysroot=@SYSROOT_DIR@'
           - '--disable-nls'
           - '--disable-gdb'
@@ -38,7 +38,7 @@ tools:
       - args:
         - '@THIS_SOURCE_DIR@/configure'
         - '--prefix=@PREFIX@'
-        - '--target=@OPTION:arch@-unknown-proxima'
+        - '--target=@OPTION:arch@-@OPTION:triplet@'
         - '--with-sysroot=@SYSROOT_DIR@'
         - '--disable-nls'
         - '--enable-gdb'
