--- a/packages/gcc.yml
+++ b/packages/gcc.yml
@@ -12,7 +12,7 @@ sources:
       - args: ['@SOURCE_ROOT@/support/autoconf/regenerate.sh', '-I@THIS_SOURCE_DIR@/config']
 
 tools:
-  - name: host-gcc
+  - name: host-gcc-bootstrap
     architecture: '@OPTION:arch@'
     from_source: gcc
     tools_required:
@@ -22,47 +22,21 @@ tools:
       - args:
           - '@THIS_SOURCE_DIR@/configure'
           - '--prefix=@PREFIX@'
-          - '--target=@OPTION:arch@-unknown-proxima'
+          - '--target=@OPTION:arch@-@OPTION:triplet@'
           - '--with-sysroot=@SYSROOT_DIR@'
           - '--disable-nls'
-          - '--enable-languages=c,c++'
+          - '--enable-languages=c'
           - '--enable-default-pie'
-          - '--enable-shared'
           - '--disable-frame-pointer'
-    stages:
-      - name: compiler
-        pkgs_required:
-          - filesystem
-        compile:
-          - args: ['make', '-j@PARALLELISM@', 'all-gcc']
-        install:
-          - args: ['make', '-j@PARALLELISM@', 'install-gcc']
-          - args: ['mkdir', '-p', '@PREFIX@/@OPTION:arch@-unknown-proxima/bin']
-          - args: ['ln', '-sf', '../../../host-binutils/@OPTION:arch@-unknown-proxima/bin/as',
-                                '@PREFIX@/@OPTION:arch@-unknown-proxima/bin/as']
-          - args: ['ln', '-sf', '../../../host-binutils/@OPTION:arch@-unknown-proxima/bin/ld',
-                                '@PREFIX@/@OPTION:arch@-unknown-proxima/bin/ld']
-      - name: support
-        pkgs_required:
-          - plibc
-        tools_required:
-          - tool: host-gcc
-            stage_dependencies: [compiler]
-        compile:
-          - args: ['make', '-j@PARALLELISM@']
-        install:
-          - args: ['make', '-j@PARALLELISM@', 'install']
-
-packages:
-  - name: gcc-libs
-    implict_package: true
-    architecture: '@OPTION:arch@'
-    from_source: gcc
-    pkgs_required:
-      - plibc
-    tools_required:
-      - host-gcc
-    build:
-      - args: ['mkdir', '-p', '@THIS_COLLECT_DIR@/usr/lib']
-      - args: "cp '@BUILD_ROOT@/tools/host-gcc/@OPTION:arch@-unknown-proxima/lib'/*.so* '@THIS_COLLECT_DIR@/usr/lib'"
-      - args: "rm '@THIS_COLLECT_DIR@/usr/lib'/*-gdb.py"
+          - '--without-headers'
+          - '--disable-shared'
+          - '--disable-threads'
+    compile:
+      - args: ['make', '-j@PARALLELISM@', 'inhibit_libc=true', 'all-gcc', 'all-target-libgcc']
+    install:
+      - args: ['make', '-j@PARALLELISM@', 'install-gcc', 'install-target-libgcc']
+      - args: ['mkdir', '-p', '@PREFIX@/@OPTION:arch@-@OPTION:triplet@/bin']
+      - args: ['ln', '-sf', '../../../host-binutils/@OPTION:arch@-@OPTION:triplet@/bin/as',
+                            '@PREFIX@/@OPTION:arch@-@OPTION:triplet@/bin/as']
+      - args: ['ln', '-sf', '../../../host-binutils/@OPTION:arch@-@OPTION:triplet@/bin/ld',
+                            '@PREFIX@/@OPTION:arch@-@OPTION:triplet@/bin/ld']
