--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -48,3 +48,4 @@ imports:
   - file: packages/pkgconf.yml
   - file: packages/plibc.yml
   - file: packages/proxima.yml
+  - file: packages/proxima-init.yml
