--- a/packages/proxima-init.yml
+++ b/packages/proxima-init.yml
@@ -1,13 +1,9 @@
 packages:
-  - name: plibc
-    implict_package: true
+  - name: proxima-init
     architecture: '@OPTION:arch@'
     source:
       subdir: sources
       version: '0.0pl@ROLLING_ID@'
-    pkgs_required:
-      - filesystem
-      - hydrogen
     tools_required:
       - host-gcc-bootstrap
       - host-meson
@@ -23,4 +19,5 @@ packages:
           - '-Db_ndebug=if-release'
           - '@THIS_SOURCE_DIR@'
     build:
-      - args: ['meson', 'install', '--destdir=@THIS_COLLECT_DIR@']
+      - args: ['meson', 'compile', '-j@PARALLELISM@']
+      - args: ['meson', 'install', '--no-rebuild', '--destdir=@THIS_COLLECT_DIR@']
